# axolotl-rs

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CUDA_STATUS.md  Cargo.toml  E2E_VALIDATION_RESEARCH.md  GPU_IMPLEMENTATION_COMPLETE.md  LORA_IMPLEMENTATION_SUMMARY.md  NEXT_PHASE_LORA_QLORA.md  PHASE1_LORA_COMPLETE.md  PORTING_PLAN.md  PR_REVIEW_RESPONSE.md  README.md  READY_FOR_GPU_TESTING.md  TASK2_COMPLETION_SUMMARY.md  TEST_COVERAGE_REPORT.md  deny.toml  roadmap.md
.github/: CI_DEPENDENCY_CONFIGURATION.md
.github/scripts/: patch-dependencies.sh
.github/workflows/: ci.yml  fleet-ci.yml  gpu-tests.yml  publish.yml  release.yml
benches/: config_parsing.rs
data/: alpaca_100.jsonl
docs/: DEPENDENCIES.md
docs/archive/: GPU_IMPLEMENTATION_COMPLETE.md  LORA_IMPLEMENTATION_SUMMARY.md  NEXT_PHASE_LORA_QLORA.md  PHASE1_LORA_COMPLETE.md  READY_FOR_GPU_TESTING.md
implementation/: AXO-FULL.md
releases/: axolotl-rs-RELEASE.md
scripts/: use-local-path-deps.sh
src/: config.rs  dataset.rs  error.rs  fixture.rs  lib.rs  llama_common.rs  lora_llama.rs  main.rs  model.rs  normalization.rs  optimizer.rs  qlora_llama.rs  scheduler.rs  trainer.rs  vsa_accel.rs
src/adapters/: mod.rs
tests/: cli_tests.rs  e2e_lora_cpu.rs  e2e_qlora.rs  gpu_checkpoint.rs  gpu_lora_targets.rs  gpu_training.rs  gpu_utils.rs  lora_llama_tests.rs  qlora_training.rs
