[package]
name = "axolotl-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
description = "YAML-driven configurable fine-tuning toolkit for LLMs in Rust"
repository = "https://github.com/tzervas/axolotl-rs"
keywords = ["llm", "fine-tuning", "training", "configuration", "yaml"]
categories = ["science", "machine-learning", "command-line-utilities"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.20"
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Adapter and quantization dependencies
# 
# For production use (importing from crates.io):
# Uncomment these lines when packages are published to crates.io
# peft-rs = { version = "0.1", optional = true }
# qlora-rs = { version = "0.1", optional = true }
# unsloth-rs = { version = "0.1", optional = true }
#
# For active development (importing from GitHub):
# Uncomment these lines to use development branches from GitHub repos
# peft-rs = { git = "https://github.com/tzervas/peft-rs", branch = "main", optional = true }
# qlora-rs = { git = "https://github.com/tzervas/qlora-rs", branch = "main", optional = true }
# unsloth-rs = { git = "https://github.com/tzervas/unsloth-rs", branch = "main", optional = true }
#
# For local development (importing from local paths):
# Uncomment these lines to use local sister project directories
# peft-rs = { path = "../peft-rs", optional = true }
# qlora-rs = { path = "../qlora-rs", optional = true }
# unsloth-rs = { path = "../unsloth-rs", optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# HTTP for model downloads
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["download"]
download = ["reqwest"]

# Real adapter/quantization libraries (requires dependencies to be uncommented above)
# Uncomment these features when you've enabled peft-rs, qlora-rs, or unsloth-rs dependencies
# peft = ["peft-rs"]
# qlora = ["qlora-rs", "peft"]
# unsloth = ["unsloth-rs"]

# Mock features for testing without real dependencies
mock-peft = []
mock-qlora = []
mock-unsloth = []

# Hardware acceleration
cuda = ["candle-core/cuda"]

# Performance optimizations
optimized = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

[[bin]]
name = "axolotl"
path = "src/main.rs"

[[bench]]
name = "config_parsing"
harness = false
