[package]
name = "axolotl-rs"
version = "1.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
description = "YAML-driven configurable fine-tuning toolkit for LLMs in Rust with VSA acceleration"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
repository = "https://github.com/tzervas/axolotl-rs"
homepage = "https://github.com/tzervas/axolotl-rs"
documentation = "https://docs.rs/axolotl-rs"
readme = "README.md"
keywords = ["llm", "fine-tuning", "training", "configuration", "yaml"]
categories = ["science", "command-line-utilities"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.20"
# Align with peft-rs (0.7). Dual 0.4+0.7 graphs break `Tensor: View` on serialize.
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Adapter and quantization dependencies
#
# Fleet / local development (default for this SoT tree): path deps to sister
# projects so `cargo check --features peft,qlora` uses peft-rs 1.0.4+ (candle
# safetensors I/O, no dual-version View conflict).
#
# For crates.io publish / pure registry builds, switch to:
#   peft-rs = { version = "1.0.4", optional = true }
#   qlora-rs = { version = "1.0", optional = true }
# and remove the [patch.crates-io] peft-rs entry below (or keep patch only in
# a workspace Cargo.toml for monorepo consumers).
peft-rs = { path = "../peft-rs", version = "1.1", optional = true }
qlora-rs = { path = "../qlora-rs", version = "1.1", optional = true }
unsloth-rs = { version = "1.0", optional = true }
vsa-optim-rs = { version = "0.1", path = "../vsa-optim-rs", optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# HTTP client for Hub download (download feature). Minimal HF resolve/main fetch.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["download"]
# Enables reqwest + minimal HuggingFace Hub download (CLI `download`).
download = ["reqwest"]

# Real adapter/quantization libraries (path deps in this tree)
peft = ["peft-rs"]
qlora = ["qlora-rs", "peft"]
unsloth = ["unsloth-rs"]
vsa-optim = ["vsa-optim-rs"]

# Mock features for testing without real dependencies
mock-peft = []
mock-qlora = []
mock-unsloth = []

# Hardware acceleration
cuda = ["candle-core/cuda"]

# Performance optimizations
optimized = []

# Ensure qlora-rs's crates.io peft-rs pin resolves to local peft-rs SoT.
[patch.crates-io]
peft-rs = { path = "../peft-rs" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

[[bin]]
name = "axolotl"
path = "src/main.rs"

[[bench]]
name = "config_parsing"
