[package]
name = "axolotl-rs"
version = "1.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
description = "YAML-driven configurable fine-tuning toolkit for LLMs in Rust with VSA acceleration"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
repository = "https://github.com/tzervas/axolotl-rs"
homepage = "https://github.com/tzervas/axolotl-rs"
documentation = "https://docs.rs/axolotl-rs"
readme = "README.md"
keywords = ["llm", "fine-tuning", "training", "configuration", "yaml"]
categories = ["science", "command-line-utilities"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.20"
# Align with peft-rs (0.7). Dual 0.4+0.7 graphs break `Tensor: View` on serialize.
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Adapter and quantization dependencies (optional; not in default features).
#
# CI / crates.io: registry versions only. Path deps break GitHub Actions because
# sister checkouts are not present. Default `cargo test` does not enable peft/
# qlora/vsa-optim, so CI stays green without local SoTs.
#
# Local fleet (sister repos at ../peft-rs etc.):
#   bash scripts/use-local-path-deps.sh
# which writes .cargo/config.toml with `paths = [...]` overrides (gitignored).
# To undo: bash scripts/use-local-path-deps.sh --clear
#
# Alternative (manual): temporarily switch lines to path= and/or add
#   [patch.crates-io]
#   peft-rs = { path = "../peft-rs" }
# in a private overlay — do not commit path deps for CI.
peft-rs = { version = "1.0", optional = true }
qlora-rs = { version = "1.0", optional = true }
unsloth-rs = { version = "1.0", optional = true }
vsa-optim-rs = { version = "0.1", optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# HTTP client for Hub download (download feature). Minimal HF resolve/main fetch.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["download"]
# Enables reqwest + minimal HuggingFace Hub download (CLI `download`).
download = ["reqwest"]

# Real adapter/quantization libraries (optional; crates.io or local path override)
peft = ["peft-rs"]
qlora = ["qlora-rs", "peft"]
unsloth = ["unsloth-rs"]
vsa-optim = ["vsa-optim-rs"]

# Mock features for testing without real dependencies
mock-peft = []
mock-qlora = []
mock-unsloth = []

# Hardware acceleration
cuda = ["candle-core/cuda"]

# Performance optimizations
optimized = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

[[bin]]
name = "axolotl"
path = "src/main.rs"

[[bench]]
name = "config_parsing"
